@@ -1,6 +1,10 @@
 Revision history for Perl extension Coro.
 
 TODO: transfer flags must be per state
+TODO: better (earlier) error messages on broken transfer's
+
+3.
+	- give a better error message on deadlock.
 
 3.01 Sun Dec  3 23:47:42 CET 2006
 	- forgot to include Coro::Timer.
